yaobank/apps/db_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: yaobank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        version: v1
    spec:
      serviceAccountName: database
      containers:
        - name: database
          image: calico/yaobank-database:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2379
          command: ["etcd"]
          args:
            - "-advertise-client-urls"
            - "http://database:2379"
            - "-listen-client-urls"
            - "http://0.0.0.0:2379"
