yaobank/apps/customer_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: yaobank
  labels:
    app: customer
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8000
  selector:
    app: customer
