yaobank/apps/db_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: yaobank
  labels:
    app: database
spec:
  ports:
    - port: 2379
      name: http
      targetPort: 2379
  selector:
    app: database
